--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
         <title>FlexBox</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="FlexBoxGyakorlas">
+        <meta name="keywords" content="FlexBox">
+        <meta name="author" content="Nguyen Duc Duy">
         <link href="css/flex.css" rel="stylesheet" type="text/css">
+        <title>Nguyen Duc Duy | FlexBox</title>
     </head>
     <body>
         <main>
